--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -40,7 +40,7 @@
     "import sqlalchemy\n",
     "from sqlalchemy.ext.automap import automap_base\n",
     "from sqlalchemy.orm import Session\n",
-    "from sqlalchemy import create_engine, func"
+    "from sqlalchemy import create_engine, inspect, func, desc"
    ]
   },
   {
@@ -50,7 +50,7 @@
    "outputs": [],
    "source": [
     "# create engine to hawaii.sqlite\n",
-    "engine = create_engine(\"sqlite:///hawaii.sqlite\")"
+    "engine = create_engine(\"sqlite:///Resources/hawaii.sqlite\")"
    ]
   },
   {
@@ -60,8 +60,10 @@
    "outputs": [],
    "source": [
     "# reflect an existing database into a new model\n",
+    "Base = automap_base()\n",
     "\n",
-    "# reflect the tables\n"
+    "# reflect the tables\n",
+    "Base.prepare(engine, reflect = True)"
    ]
   },
   {
@@ -70,7 +72,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# View all of the classes that automap found\n"
+    "# View all of the classes that automap found\n",
+    "Base.classes.keys()"
    ]
   },
   {
@@ -79,7 +82,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save references to each table\n"
+    "# Save references to each table\n",
+    "measurement = Base.classes.measurement\n",
+    "station = Base.classes.station"
    ]
   },
   {
@@ -88,7 +93,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create our session (link) from Python to the DB\n"
+    "# Create our session (link) from Python to the DB\n",
+    "session = Session(engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Produce an inspection object for the given target\n",
+    "inspector = inspect(engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use inspector to print the column names and types from measurement table\n",
+    "m = inspector.get_columns(\"measurement\")\n",
+    "for column in m:\n",
+    "    print(column[\"name\"], column[\"type\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use inspector to print the column names and types from stations table\n",
+    "s = inspector.get_columns(\"station\")\n",
+    "for column in s:\n",
+    "    print(column[\"name\"], column[\"type\"])"
    ]
   },
   {
@@ -99,12 +139,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Find the most recent date in the data set."
+    "### Design a query to retrieve the last 12 months of precipitation data and plot the results.\n",
+    "(Starting from the most recent data point in the database)."
    ]
   },
   {
@@ -113,24 +152,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Design a query to retrieve the last 12 months of precipitation data and plot the results. \n",
-    "# Starting from the most recent data point in the database. \n",
-    "\n",
-    "# Calculate the date one year from the last date in data set.\n",
-    "\n",
-    "\n",
-    "# Perform a query to retrieve the data and precipitation scores\n",
-    "\n",
-    "\n",
+    "# Find the most recent date in the data set\n",
+    "stringRecent_date = session.query(measurement.date).order_by(measurement.date.desc()).first()[0]\n",
+    "stringRecent_date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert string date format to date timestamp format for datetime module\n",
+    "mostRecent_date = (dt.datetime.strptime(stringRecent_date, \"%Y-%m-%d\")).date()\n",
+    "mostRecent_date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate the date one year from the latest date in data set\n",
+    "mostFormer_date = mostRecent_date - dt.timedelta(days = 365)\n",
+    "mostFormer_date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Perform a query to retrieve the date and precipitation scores\n",
+    "precipitationData = session.query(measurement.date, measurement.prcp).\\\n",
+    "                    filter((measurement.date <= mostRecent_date) & (measurement.date >= mostFormer_date)).all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Save the query results as a Pandas DataFrame and set the index to the date column\n",
-    "\n",
-    "\n",
-    "# Sort the dataframe by date\n",
-    "\n",
-    "\n",
-    "# Use Pandas Plotting with Matplotlib to plot the data\n",
-    "\n",
-    "\n"
+    "precipitation_df = pd.DataFrame(precipitationData)\n",
+    "precipitation_df = precipitation_df.set_index(\"date\")"
    ]
   },
   {
@@ -139,7 +207,122 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use Pandas to calcualte the summary statistics for the precipitation data\n"
+    "# Sort the DataFrame by date\n",
+    "precipitation_df = precipitation_df.sort_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Drop rows containing NaN values\n",
+    "precipitation_df.dropna(axis = 0, how = \"any\", thresh = None, subset = None, inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Rename column for cleaner DataFrame and for plot legend\n",
+    "precipitation_df = precipitation_df.rename(columns = {\"prcp\":\"Precipitation\"})\n",
+    "precipitation_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot_df = precipitation_df.reset_index()\n",
+    "# plot_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot_df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# grouped_df = plot_df.groupby([\"date\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dailyRain = grouped_df[\"Precipitation\"].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# final_df = pd.DataFrame({\"Daily Precipitation\":(dailyRain)})\n",
+    "# final_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# final_df = final_df.reset_index()\n",
+    "# final_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Use Pandas Plotting with Matplotlib to plot the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create groupby object by date?\n",
+    "# Bar plot???\n",
+    "\n",
+    "# Define bar plot size, color and transparency, legend, and x tickmark orientation\n",
+    "pandasBar_Plot = precipitation_df.plot(figsize = (18,10), color = \"mediumseagreen\", alpha = 1, legend = True,\n",
+    "                                       rot = 45)\n",
+    "\n",
+    "# Define bar plot title, x label, and y label (and their font sizes)\n",
+    "pandasBar_Plot.set_title(\"Daily Precipitation Totals (August 23, 2016 thru August 23, 2017)\", fontsize = 18)\n",
+    "pandasBar_Plot.set_xlabel(\"Date\", fontsize = 14)\n",
+    "pandasBar_Plot.set_ylabel(\"Precipitation (in inches)\", fontsize = 14)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use Pandas to calculate the summary statistics for the precipitation data\n",
+    "precipitation_df.describe()"
    ]
   },
   {
@@ -232,7 +415,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.6.10"
   },
   "nteract": {
    "version": "0.12.3"
