Step one complete.

--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -306,13 +306,13 @@
     "# Bar plot???\n",
     "\n",
     "# Define bar plot size, color and transparency, legend, and x tickmark orientation\n",
-    "pandasBar_Plot = precipitation_df.plot(figsize = (18,10), color = \"mediumseagreen\", alpha = 1, legend = True,\n",
-    "                                       rot = 45)\n",
+    "pandasPlot = precipitation_df.plot(figsize = (18,10), color = \"mediumseagreen\", alpha = 1, legend = True,\n",
+    "                                    rot = 45)\n",
     "\n",
     "# Define bar plot title, x label, and y label (and their font sizes)\n",
-    "pandasBar_Plot.set_title(\"Daily Precipitation Totals (August 23, 2016 thru August 23, 2017)\", fontsize = 18)\n",
-    "pandasBar_Plot.set_xlabel(\"Date\", fontsize = 14)\n",
-    "pandasBar_Plot.set_ylabel(\"Precipitation (in inches)\", fontsize = 14)"
+    "pandasPlot.set_title(\"Daily Precipitation Totals (August 23, 2016 thru August 23, 2017)\", fontsize = 18)\n",
+    "pandasPlot.set_xlabel(\"Date\", fontsize = 14)\n",
+    "pandasPlot.set_ylabel(\"Precipitation (in inches)\", fontsize = 14)"
    ]
   },
   {
@@ -338,7 +338,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Design a query to calculate the total number stations in the dataset\n"
+    "# Design a query to calculate the total number stations in the dataset\n",
+    "all_stations = session.query(station).count()\n",
+    "print(f\"The total number of stations in the dataset is:  {all_stations}\")"
    ]
   },
   {
@@ -348,7 +350,11 @@
    "outputs": [],
    "source": [
     "# Design a query to find the most active stations (i.e. what stations have the most rows?)\n",
-    "# List the stations and the counts in descending order.\n"
+    "# List the stations and the counts in descending order.\n",
+    "mostActive_stations = session.query(measurement.station, func.count(measurement.station), station.name).\\\n",
+    "                      order_by(func.count(measurement.station).desc()).\\\n",
+    "                      group_by(measurement.station).all()\n",
+    "mostActive_stations"
    ]
   },
   {
@@ -357,7 +363,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Using the most active station id from the previous query, calculate the lowest, highest, and average temperature.\n"
+    "# Using the most active station id from the previous query, calculate the lowest, highest, and average temperature.\n",
+    "mostActive_id = mostActive_stations[0][0]\n",
+    "\n",
+    "lowest_temp = session.query(measurement.tobs).\\\n",
+    "              filter(measurement.station == mostActive_id).\\\n",
+    "              order_by(measurement.tobs.asc()).first()\n",
+    "\n",
+    "highest_temp = session.query(measurement.tobs).\\\n",
+    "               filter(measurement.station == mostActive_id).\\\n",
+    "               order_by(measurement.tobs.desc()).first()\n",
+    "\n",
+    "average_temp = (session.query(func.avg(measurement.tobs)).\\\n",
+    "               filter(measurement.station == mostActive_id))\n",
+    "\n",
+    "# Pull station name from stations table by ID\n",
+    "# station_name = session.query(station.name).\\\n",
+    "#                filter(measurement.station == mostActive_id)\n",
+    "# print(f\"At station {station_name}, the lowest temperature recorded was {lowest_temp[0]} F.\")\n",
+    "\n",
+    "print(f\"At station ID {mostActive_id}, the lowest temperature recorded was {lowest_temp[0]} F.\")\n",
+    "print(f\"At station ID {mostActive_id}, the highest temperature recorded was {highest_temp[0]} F.\")\n",
+    "print(f\"At station ID {mostActive_id}, the average temperature recorded was {average_temp[0]} F.\")"
    ]
   },
   {
@@ -367,7 +394,55 @@
    "outputs": [],
    "source": [
     "# Using the most active station id\n",
-    "# Query the last 12 months of temperature observation data for this station and plot the results as a histogram\n"
+    "# Query the last 12 months of temperature observation data for this station and plot the results as a histogram\n",
+    "temperatureData = session.query(measurement.tobs).\\\n",
+    "                  filter((measurement.station == mostActive_id)\\\n",
+    "                  & (measurement.date <= mostRecent_date)\\\n",
+    "                  & (measurement.date >= mostFormer_date)).all()\n",
+    "temperatureData"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the query results as a Pandas DataFrame\n",
+    "temperature_df = pd.DataFrame(temperatureData)\n",
+    "temperature_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Rename column for cleaner DataFrame and for plot legend\n",
+    "temperature_df = temperature_df.rename(columns = {\"tobs\":\"Temperature Observation\"})\n",
+    "temperature_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Pass values into histogram plot, and define color, transparency, plot size, and number of bins\n",
+    "temperature_df.plot.hist(color = \"darkorange\", ec = \"k\", alpha = 0.5, figsize = (18, 10), bins = 12)\n",
+    "\n",
+    "# Define histogram plot title, x label, and y label (and their font sizes)\n",
+    "# plt.title(f\"Frequency of Recorded Temperatures at {station_name}\", fontsize = 18)\n",
+    "plt.title(f\"Frequency of Recorded Temperatures at Station ID {mostActive_id}\", fontsize = 18)\n",
+    "plt.xlabel(\"Temperature (F°)\", fontsize = 14)\n",
+    "plt.ylabel(\"Number of Observations\", fontsize = 14)\n",
+    "\n",
+    "# Print pyplot histogram plot to image file\n",
+    "# plt.savefig(\"temperatures_histogram.png\")\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
