Bonus challenges in progress, not yet complete.

--- a/temp_analysis_bonus_2_starter.ipynb
+++ b/temp_analysis_bonus_2_starter.ipynb
@@ -40,7 +40,7 @@
     "import sqlalchemy\n",
     "from sqlalchemy.ext.automap import automap_base\n",
     "from sqlalchemy.orm import Session\n",
-    "from sqlalchemy import create_engine, func"
+    "from sqlalchemy import create_engine, func, inspect"
    ]
   },
   {
@@ -50,7 +50,7 @@
    "outputs": [],
    "source": [
     "# create engine to hawaii.sqlite\n",
-    "engine = create_engine(\"sqlite:///hawaii.sqlite\")"
+    "engine = create_engine(\"sqlite:///Resources/hawaii.sqlite\")"
    ]
   },
   {
@@ -60,8 +60,10 @@
    "outputs": [],
    "source": [
     "# reflect an existing database into a new model\n",
+    "Base = automap_base()\n",
     "\n",
-    "# reflect the tables"
+    "# reflect the tables\n",
+    "Base.prepare(engine, reflect = True)"
    ]
   },
   {
@@ -70,7 +72,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# View all of the classes that automap found\n"
+    "# View all of the classes that automap found\n",
+    "Base.classes.keys()"
    ]
   },
   {
@@ -79,7 +82,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save references to each table"
+    "# Save references to each table\n",
+    "measurement = Base.classes.measurement\n",
+    "station = Base.classes.station"
    ]
   },
   {
@@ -88,7 +93,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create our session (link) from Python to the DB"
+    "# Create our session (link) from Python to the DB\n",
+    "session = Session(engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Produce an inspection object for the given target\n",
+    "inspector = inspect(engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use inspector to print the column names and types from measurement table\n",
+    "m = inspector.get_columns(\"measurement\")\n",
+    "for column in m:\n",
+    "    print(column[\"name\"], column[\"type\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use inspector to print the column names and types from stations table\n",
+    "s = inspector.get_columns(\"station\")\n",
+    "for column in s:\n",
+    "    print(column[\"name\"], column[\"type\"])"
    ]
   },
   {
@@ -117,8 +157,8 @@
     "        TMIN, TAVE, and TMAX\n",
     "    \"\"\"\n",
     "    \n",
-    "    return session.query(func.min(Measurement.tobs), func.avg(Measurement.tobs), func.max(Measurement.tobs)).\\\n",
-    "        filter(Measurement.date >= start_date).filter(Measurement.date <= end_date).all()\n",
+    "    return session.query(func.min(measurement.tobs), func.avg(measurement.tobs), func.max(measurement.tobs)).\\\n",
+    "        filter(measurement.date >= start_date).filter(measurement.date <= end_date).all()\n",
     "\n",
     "# For example\n",
     "print(calc_temps('2012-02-28', '2012-03-05'))"
@@ -130,8 +170,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use the function `calc_temps` to calculate the tmin, tavg, and tmax \n",
-    "# for a year in the data set"
+    "# Declare variables to hold vacation start and end dates\n",
+    "start_date = \"2012-08-01\"\n",
+    "end_date = \"2012-08-07\"\n",
+    "\n",
+    "# Use the function `calc_temps` to calculate the tmin, tavg, and tmax for a year in the dataset\n",
+    "def calc_temps(start_date, end_date):\n",
+    "    \"\"\"TMIN, TAVG, and TMAX for a list of dates.\n",
+    "    \n",
+    "    Args:\n",
+    "        start_date (string): A date string in the format %Y-%m-%d\n",
+    "        end_date (string): A date string in the format %Y-%m-%d\n",
+    "        \n",
+    "    Returns:\n",
+    "        TMIN, TAVE, and TMAX\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    return session.query(func.min(measurement.tobs), func.avg(measurement.tobs), func.max(measurement.tobs)).\\\n",
+    "        filter(measurement.date >= start_date).filter(measurement.date <= end_date).all()\n",
+    "\n",
+    "# Display minimum, average, and max temps\n",
+    "print(calc_temps(start_date, end_date))"
    ]
   },
   {
@@ -143,7 +202,34 @@
     "# Plot the results from your previous query as a bar chart. \n",
     "# Use \"Trip Avg Temp\" as your Title\n",
     "# Use the average temperature for bar height (y value)\n",
-    "# Use the peak-to-peak (tmax-tmin) value as the y error bar (yerr)"
+    "# Use the peak-to-peak (tmax-tmin) value as the y error bar (yerr)\n",
+    "\n",
+    "# Declare variables to hold values extracted from array\n",
+    "tmax = calc_temps(start_date, end_date)[0][2]\n",
+    "tavg = (round(calc_temps(start_date, end_date)[0][1]))\n",
+    "tmin = calc_temps(start_date, end_date)[0][0]\n",
+    "\n",
+    "# Declare variable to hold y error bar value\n",
+    "yError = tmax - tmin\n",
+    "\n",
+    "# Define bar plot size and remove x axis gridlines\n",
+    "plt.figure(figsize = (3,10))\n",
+    "plt.gca().xaxis.grid(False)\n",
+    "\n",
+    "# Pass values into bar plot, and define color and transparency\n",
+    "plt.bar(2.5, height = tavg, width = 3, ec = \"k\", yerr = yError, color = \"darkorange\", alpha = 0.5)\n",
+    "\n",
+    "# Define bar plot title, x label, and y label (and their font sizes)\n",
+    "plt.title(\"Trip Avg Temp (°F)\", fontsize = 18)\n",
+    "plt.ylabel(\"Avg Temp (°F)\", fontsize = 14)\n",
+    "plt.ylim(0, 110)\n",
+    "plt.xlim(0, 5)\n",
+    "plt.tick_params(bottom = False, labelbottom = False)\n",
+    "\n",
+    "# Print pyplot bar plot to image file\n",
+    "# plt.savefig(\"../Images/Trip_Avg_Bar_Plot.jpg\")\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
@@ -161,8 +247,87 @@
    "source": [
     "# Calculate the total amount of rainfall per weather station for your trip dates using the previous year's \n",
     "# matching dates.\n",
-    "# Sort this in descending order by precipitation amount and list the station, name, latitude, longitude, and elevation\n"
+    "# Sort this in descending order by precipitation amount and list the station, name, latitude, longitude, and elevation\n",
+    "precipitationData = session.query(measurement.date, measurement.station, measurement.prcp, station.name, station.latitude,\n",
+    "                                  station.longitude, station.elevation).\\\n",
+    "                    filter((measurement.date <= end_date) & (measurement.date >= start_date)).all()\n",
+    "precipitationData"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "precipitation_df = pd.DataFrame(precipitationData)\n",
+    "precipitation_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "precipitation_df.dropna(axis = 0, how = \"any\", inplace = True)\n",
+    "precipitation_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stationPrcp = precipitation_df.groupby([\"station\"])\n",
+    "stationRain = stationPrcp[\"prcp\"].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stationRain_df = pd.DataFrame({\"Precipitation\":(stationRain)})\n",
+    "stationRain_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stationRain_df = stationRain_df.reset_index()\n",
+    "stationRain_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Merge caseData and censusData DataFrames\n",
+    "mergedStations_df = pd.merge(stationRain_df, precipitation_df, how = \"left\", left_on = \"station\", right_on = \"station\")\n",
+    "mergedStations_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -184,8 +349,8 @@
     "    \n",
     "    \"\"\"\n",
     "    \n",
-    "    sel = [func.min(Measurement.tobs), func.avg(Measurement.tobs), func.max(Measurement.tobs)]\n",
-    "    return session.query(*sel).filter(func.strftime(\"%m-%d\", Measurement.date) == date).all()\n",
+    "    sel = [func.min(measurement.tobs), func.avg(measurement.tobs), func.max(measurement.tobs)]\n",
+    "    return session.query(*sel).filter(func.strftime(\"%m-%d\", measurement.date) == date).all()\n",
     "\n",
     "# For example\n",
     "daily_normals(\"01-01\")"
@@ -201,17 +366,46 @@
     "# push each tuple of calculations into a list called `normals`\n",
     "\n",
     "# Set the start and end date of the trip\n",
-    "start_date = '2017-08-01'\n",
-    "end_date = '2017-08-07'\n",
+    "# start = \"2011-08-01\"\n",
+    "# end = \"2011-08-07\"\n",
     "\n",
-    "# Use the start and end date to create a range of dates\n",
+    "# # Use the start and end date to create a range of dates\n",
+    "# startingDate = (dt.datetime.strptime(start, \"%Y-%m-%d\")).date()\n",
+    "# endingDate = (dt.datetime.strptime(end, \"%Y-%m-%d\")).date()\n",
     "\n",
-    "\n",
+    "# numdays = 7\n",
+    "# dateList = []\n",
+    "# for x in range (0, numdays):\n",
+    "#     dateList.append(endingDate - dt.timedelta(days = x))\n",
+    "# print(dateList)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Strip off the year and save a list of strings in the format %m-%d\n",
     "\n",
+    "# def daily_normals(date):\n",
+    "#     \"\"\"Daily Normals.\n",
+    "    \n",
+    "#     Args:\n",
+    "#         date (str): A date string in the format '%m-%d'\n",
+    "        \n",
+    "#     Returns:\n",
+    "#         A list of tuples containing the daily normals, tmin, tavg, and tmax\n",
+    "    \n",
+    "#     \"\"\"\n",
+    "    \n",
+    "#     sel = [func.min(measurement.tobs), func.avg(measurement.tobs), func.max(measurement.tobs)]\n",
+    "#     return session.query(*sel).filter(func.strftime(\"%m-%d\", measurement.date) == date).all()\n",
+    "\n",
+    "# daily_normals(dateList)\n",
     "\n",
     "# Use the `daily_normals` function to calculate the normals for each date string \n",
-    "# and append the results to a list called `normals`.\n"
+    "# and append the results to a list called `normals`."
    ]
   },
   {
@@ -220,7 +414,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load the previous query results into a Pandas DataFrame and add the `trip_dates` range as the `date` index"
+    "# Set the start and end date of the trip\n",
+    "start = \"2011-08-01\"\n",
+    "end = \"2011-08-07\"\n",
+    "\n",
+    "# Perform a query to retrieve the date and precipitation scores\n",
+    "tempsData = session.query(measurement.date, measurement.station, measurement.tobs).\\\n",
+    "            filter((measurement.date <= end) & (measurement.date >= start)).all()\n",
+    "tempsData"
    ]
   },
   {
@@ -229,7 +430,73 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Plot the daily normals as an area plot with `stacked=False`"
+    "# Load the previous query results into a Pandas DataFrame and add the `trip_dates` range as the `date` index\n",
+    "temps_df = pd.DataFrame(tempsData)\n",
+    "# precipitation_df = precipitation_df.set_index(\"date\")\n",
+    "temps_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert the date column format from string to datetime\n",
+    "temps_df[\"date\"] = pd.to_datetime(temps_df[\"date\"])\n",
+    "temps_df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temps_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dateTemp = temps_df.groupby([\"date\"])\n",
+    "\n",
+    "dailyMin_Temp = dateTemp[\"tobs\"].min()\n",
+    "dailyAvg_Temp = dateTemp[\"tobs\"].mean()\n",
+    "dailyMax_Temp = dateTemp[\"tobs\"].max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dailyTemps_df = pd.DataFrame({\"Daily Minimum Temp\":(dailyMin_Temp),\n",
+    "                              \"Daily Average Temp\":(dailyAvg_Temp),\n",
+    "                              \"Daily Maximum Temp\":(dailyMax_Temp)})\n",
+    "dailyTemps_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot the daily normals as an area plot with `stacked=False`\n",
+    "dailyTemps_df.plot.area(figsize = (18,10), stacked = False, alpha = 0.25, rot = 45, fontsize = 12)\n",
+    "\n",
+    "plt.title(f\"Daily Temperature Normals from {start} to {end}\", fontsize = 18)\n",
+    "plt.xlabel(\"Date\", fontsize = 14)\n",
+    "plt.ylabel(\"Temperature (F°)\", fontsize = 14)\n",
+    "plt.ylim(0, 110)\n",
+    "\n",
+    "# plt.savefig(\"Images/Daily_Temperature_Normals.png\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -244,7 +511,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Close Session\n",
+    "session.close()"
+   ]
   }
  ],
  "metadata": {
@@ -263,7 +533,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
