--- a/temp_analysis_bonus_1_starter.ipynb
+++ b/temp_analysis_bonus_1_starter.ipynb
@@ -24,7 +24,7 @@
    "outputs": [],
    "source": [
     "# \"tobs\" is \"temperature observations\"\n",
-    "df = pd.read_csv('hawaii_measurements.csv')\n",
+    "df = pd.read_csv(\"Resources/hawaii_measurements.csv\")\n",
     "df.head()"
    ]
   },
@@ -34,7 +34,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convert the date column format from string to datetime"
+    "# Convert the date column format from string to datetime\n",
+    "df[\"date\"] = pd.to_datetime(df[\"date\"])\n",
+    "df.dtypes"
    ]
   },
   {
@@ -43,16 +45,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set the date column as the DataFrame index"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Drop the date column"
+    "# Set the date column as the DataFrame index\n",
+    "\n",
+    "# measurement_df = pd.DataFrame(df)\n",
+    "# measurement_df = measurement_df.set_index(\"date\")\n",
+    "# measurement_df.head()"
    ]
   },
   {
@@ -68,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scipy import stats"
+    "from scipy import stats as st"
    ]
   },
   {
@@ -77,7 +74,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Filter data for desired months"
+    "# Filter data for desired months\n",
+    "june_df = df[df[\"date\"].dt.month == 6]\n",
+    "june_df"
    ]
   },
   {
@@ -86,7 +85,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Identify the average temperature for June"
+    "# Identify the average temperature for June\n",
+    "juneAverage_temp = june_df[\"tobs\"].mean()\n",
+    "print(f\"The average temperature in Hawaii for June is {round(juneAverage_temp)}°F.\")"
    ]
   },
   {
@@ -95,7 +96,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Identify the average temperature for December"
+    "# Filter data for desired months\n",
+    "december_df = df[df[\"date\"].dt.month == 12]\n",
+    "december_df"
    ]
   },
   {
@@ -104,7 +107,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create collections of temperature data"
+    "# Identify the average temperature for December\n",
+    "decemberAverage_temp = december_df[\"tobs\"].mean()\n",
+    "print(f\"The average temperature in Hawaii for December is {round(decemberAverage_temp)}°F.\")"
    ]
   },
   {
@@ -113,14 +118,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Run paired t-test"
+    "# Create collections of temperature data\n",
+    "juneStation_mean = june_df.groupby(\"station\").mean()\n",
+    "decemberStation_mean = december_df.groupby(\"station\").mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run paired t-test\n",
+    "p_value = st.ttest_rel(juneStation_mean, decemberStation_mean)[1]\n",
+    "print(f\"Using a paired sample t-test, the p-value is:  {p_value}.\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Analysis"
+    "### Analysis\n",
+    "Hawaii is reputed to enjoy mild weather all year.  Is there a meaningful difference between the temperature in, for example, June and December?\n",
+    "- We defined the null hypothesis as, \"there is no difference between June and December temperature averages.\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conclusion\n",
+    "The p-value is the evidence against a null hypothesis.  The smaller the p-value, the stronger the evidence in favor of rejecting the null hypothesis.  In this case, since the p-value is less than 0.05, we reject the null hypothesis and determine that the results ARE statistically significant."
    ]
   },
   {
@@ -147,7 +175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
