Notebook and app mostly complete.  Bonuses in progress.

--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -374,8 +374,8 @@
     "               filter(measurement.station == mostActive_id).\\\n",
     "               order_by(measurement.tobs.desc()).first()\n",
     "\n",
-    "average_temp = (session.query(func.avg(measurement.tobs)).\\\n",
-    "               filter(measurement.station == mostActive_id))\n",
+    "average_temp = session.query(func.avg(measurement.tobs)).\\\n",
+    "               filter(measurement.station == mostActive_id)\n",
     "\n",
     "# Pull station name from stations table by ID\n",
     "# station_name = session.query(station.name).\\\n",
