--- a/temp_analysis_bonus_1_starter.ipynb
+++ b/temp_analysis_bonus_1_starter.ipynb
@@ -47,9 +47,19 @@
    "source": [
     "# Set the date column as the DataFrame index\n",
     "\n",
-    "# measurement_df = pd.DataFrame(df)\n",
-    "# measurement_df = measurement_df.set_index(\"date\")\n",
-    "# measurement_df.head()"
+    "measurement_df = pd.DataFrame(df)\n",
+    "measurement_df = measurement_df.set_index(measurement_df[\"date\"])\n",
+    "measurement_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "measurement_df = measurement_df.drop(columns = \"date\")\n",
+    "measurement_df.head()"
    ]
   },
   {
@@ -75,7 +85,7 @@
    "outputs": [],
    "source": [
     "# Filter data for desired months\n",
-    "june_df = df[df[\"date\"].dt.month == 6]\n",
+    "june_df = measurement_df[measurement_df.index.month == 6]\n",
     "june_df"
    ]
   },
@@ -97,7 +107,7 @@
    "outputs": [],
    "source": [
     "# Filter data for desired months\n",
-    "december_df = df[df[\"date\"].dt.month == 12]\n",
+    "december_df = measurement_df[measurement_df.index.month == 12]\n",
     "december_df"
    ]
   },
@@ -130,7 +140,7 @@
    "outputs": [],
    "source": [
     "# Run paired t-test\n",
-    "p_value = st.ttest_rel(juneStation_mean, decemberStation_mean)[1]\n",
+    "p_value = st.ttest_ind(june_df[\"tobs\"], december_df[\"tobs\"])\n",
     "print(f\"Using a paired sample t-test, the p-value is:  {p_value}.\")"
    ]
   },
